2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Andrew Zabolotny:
	Patch #2995091: Fix gcc 4.4.1 warnings
	Actually, I went a lot further, and made it completely -Wall -Wextra
	clean for GCC 4.x.  (GCC 3.x users might want to use --disable-warnings
	in configure.)
	* configure.ac: Add --enable-warnings option.
	* src/pragma.h: New file, #pragma abstraction
	* src/jtag.h: Include "pragma.h" so it's universally usable
	* src/Makefile.am (avarice_SOURCES): Add pragma.h.
	* src/devdescr.cc: Silence compiler warnings.
	* src/gnu_getopt.c: (Ditto.)
	* src/jtag2.h: (Ditto.)
	* src/jtag2bp.cc: (Ditto.)
	* src/jtag2io.cc: (Ditto.)
	* src/jtag2prog.cc: (Ditto.)
	* src/jtag2run.cc: (Ditto.)
	* src/jtag2usb.cc: (Ditto.)
	* src/jtagbp.cc: (Ditto.)
	* src/jtaggeneric.cc: (Ditto.)
	* src/jtagio.cc: (Ditto.)
	* src/jtagprog.cc: (Ditto.)
	* src/jtagrw.cc: (Ditto.)
	* src/main.cc: (Ditto.)
	* src/remote.cc: (Ditto.)

2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Patch #2842239: Fix for deprecated string warning
	* src/jtag2prog.cc (jtag2::downloadToTarget): Turn "target" and
	"default_target" const to eliminate a compiler warning.

2011-05-06  Eric B. Weddington  <eric.weddington@atmel.com>

	Patch #3298045.
	* devdescr.cc: Fix device IDs for ATmega325P and ATmega3250P.

2009-08-26  Shaun Jackman  <sjackman@gmail.com>

	* configure.ac: add bfd_object() to the check whether libbfd
	requires libz.

2009-06-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug 2812023: build failed with gcc 4.4.0
	* src/jtag2usb.cc (opendev): make a local copy of jtagDeviceName,
	and then operate on that copy instead of trying to modify a const
	object.

2009-05-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc (ATmega128RFA1): update the number of
	interrupt vectors, and extended IO bitmaps.

2009-05-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/devdescr.xsl: update for rev 1.29 of src/jtag.h:
	generate the is_xmega flag correctly
