@@ -1,5 +1,13 @@
 2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	Patch #2842235: Fix segfault when programming with .fuses section
+	* src/jtagprog.cc (get_section_addr): Return 0xffffffff for unknown
+	section memory types, so sections like .fuses will be silently
+	ignored.
+	* src/jtag2prog.cc (get_section_addr): (Ditto.)
+
+2011-08-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	Submitted by Andrew Zabolotny:
 	Patch #2995091: Fix gcc 4.4.1 warnings
 	Actually, I went a lot further, and made it completely -Wall -Wextra
